@@ -1,3 +1,5 @@
 .deps
 Makefile.in
 Makefile
+*.lo
+*.la
