@@ -47,6 +47,7 @@ AC_CHECK_PROG(PNMTOPS, pnmtops, pnmtops)
 AC_CHECK_PROG(PSTOPNM, pstopnm, pstopnm)
 AC_CHECK_PROG(SRCONV, srconv, srconv, true)
 AC_CHECK_PROG(TR, tr, tr)
+AC_DISABLE_SHARED
 AC_PROG_LIBTOOL
 
 AM_YFLAGS='-d'
